--- a/index.html
+++ b/index.html
@@ -2,42 +2,79 @@
 <html>
 
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' href='libs/bootstrap/css/bootstrap.min.css'>
-    <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
+  <meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <title>Temperamentos</title>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <link rel='stylesheet' href='libs/bootstrap/css/bootstrap.min.css'>
+  <link rel='stylesheet' href='css/Mystyle.css'>
+  <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
+
 </head>
 
 
 <body>
+  <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">
-            <img src="imagem/icone.png" width="30" height="30" class="d-inline-block align-top" alt="Sociedade Brasileira de Eubiose">
-        </a>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li>
-          </ul>
+      <a class="navbar-brand" href="#">
+        <img src="imagem/icone.png" width="30" height="30" class="d-inline-block align-top"
+          alt="Sociedade Brasileira de Eubiose">
+      </a>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Questinonário</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Temp1</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Temp2</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Temp3</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Temp4</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+
+
+  <article>
+    <main>
+      <div id="principal">
+        <div class="jumbotron">
+          <h1 class="display-4">Bem Vindo!!</h1>
+          <p class="lead">Esta é uma página inicial do questionário sobre temperamentos.</p>
+          <hr class="my-4">
+          <p>Aqui você encontrará um breve conteúdo sobre os quatro temperamentos bem como um questionário para sua
+            própria
+            análise.</p>
+          <a class="btn btn-primary btn-lg" href="#" role="button" onclick="loadDoc();">Saiba mais</a>
         </div>
-      </nav>
-    <link href="libs/jquery-3.4.1.min.js">
-    <link href="libs/popper.min.js">
-    <link href="libs/bootstrap/js/bootstrap.min.js">
+      </div>
+
+    </main>
+  </article>
+
+  <footer>
+
+  </footer>
+  <link href="libs/jquery-3.4.1.min.js" type="text/javascript">
+  <link href="libs/popper.min.js" type="text/javascript">
+  <link href="libs/bootstrap/js/bootstrap.min.js" type="text/javascript">
+  <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.7/js/mdb.min.js"></script>-->
+  <link href="js/myscripts.js" type="text/javascript">
 
 </body>
+
 
 
 </html>
