--- a/index.html
+++ b/index.html
@@ -5,76 +5,177 @@
   <meta charset='utf-8'>
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Temperamentos</title>
+  <link rel="icon" href="imagem/icone.png">
   <meta name='viewport' content='width=device-width, initial-scale=1'>
   <link rel='stylesheet' href='libs/bootstrap/css/bootstrap.min.css'>
+  <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
   <link rel='stylesheet' href='css/Mystyle.css'>
-  <!--<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
+
 
 </head>
 
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <a class="navbar-brand" href="#">
         <img src="imagem/icone.png" width="30" height="30" class="d-inline-block align-top"
           alt="Sociedade Brasileira de Eubiose">
       </a>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample03"
+        aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarsExample03">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Questinonário</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Temp1</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Temp2</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Temp3</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Temp4</a>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true"
+              aria-expanded="false">Temperamentos</a>
+            <div class="dropdown-menu" aria-labelledby="dropdown03">
+              <a class="dropdown-item" href="#">Sanguíneo</a>
+              <a class="dropdown-item" href="#">Fleumático</a>
+              <a class="dropdown-item" href="#">Bilioso</a>
+              <a class="dropdown-item" href="#">Linfático</a>
+            </div>
           </li>
         </ul>
+        <!--
+          <form class="form-inline my-2 my-md-0">
+          <input class="form-control" type="text" placeholder="Search">
+        </form>
+        -->
       </div>
     </nav>
-  </header>
 
 
+    <article>
+      <main>
+        <!-- Page Content -->
+        <div class="container">
 
-  <article>
-    <main>
-      <div id="principal">
-        <div class="jumbotron">
-          <h1 class="display-4">Bem Vindo!!</h1>
-          <p class="lead">Esta é uma página inicial do questionário sobre temperamentos.</p>
-          <hr class="my-4">
-          <p>Aqui você encontrará um breve conteúdo sobre os quatro temperamentos bem como um questionário para sua
-            própria
-            análise.</p>
-          <a class="btn btn-primary btn-lg" href="#" role="button" onclick="loadDoc();">Saiba mais</a>
+          <!-- Jumbotron Header -->
+          <header class="jumbotron my-4">
+            <h1 class="display-3">Olá, Seja Bem Vindo!</h1>
+            <p class="lead">Esta é uma página para a realização do questionário sobre temperamentos.</p>
+            <a class="btn btn-primary btn-lg" href="#" role="button">Começar»</a>
+          </header>
+          <div id="imgParalax" class="parallax">
+
+          </div>
+          <!-- Page Features -->
+          <div class="row text-center">
+
+            <div class="col-lg-3 col-md-6 mb-4 zoom">
+              <div class="card">
+                <img class="card-img-top" src="imagem/ar.png" alt="">
+                <div class="card-body">
+                  <h4 class="card-title">Sanguíneo</h4>
+                  <p class="card-text text-justify">O temperamento sanguíneo tem traços de nervoso e de
+                    linfático, porém não tem traços de bilioso. Tem pouca energia e pouca excitação e
+                    liga-se ao elemento ar. É o temperamento das pessoas que querem fazer muitas coisas e se interessam
+                    por tudo,porem não tem energia suficiente para realizá-las.</p>
+                </div>
+                <div class="card-footer">
+                  <a href="#" class="btn btn-success">Ver detalhes »</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4 zoom">
+              <div class="card">
+                <img class="card-img-top" src="imagem/fogo.png" alt="">
+                <div class="card-body">
+                  <h4 class="card-title">Colérico</h4>
+                  <p class="card-text text-justify">O temperamento nervoso ou colérico tem traços de sanguíneo e de
+                    bilioso, seus
+                    dois adjacentes, porém não tem traços de linfático, seu antagônico ou oposto. Tem grande energia e
+                    grande
+                    excitação e liga-se ao elemento fogo, por isso é o temperamento dos líderes, chefes e dirigentes em
+                    geral.</p>
+                </div>
+                <div class="card-footer">
+                  <a href="" class="btn btn-danger">Ver detalhes »</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4 zoom">
+              <div class="card">
+                <img class="card-img-top" src="imagem/terra.png" alt="">
+                <div class="card-body">
+                  <h4 class="card-title">Melancólico</h4>
+                  <p class="card-text text-justify">O temperamento bilioso ou melancólico tem traços de nervoso e de
+                    linfático, porém
+                    não tem traços de sanguíneo, o seu oposto. Tem energia e pouca excitação e liga-se ao elemento
+                    terra.
+                    É o temperamento dos introvertidos, dos sofredores que vivem dentro do seu grande mundo
+                    interior.</p>
+                </div>
+                <div class="card-footer">
+                  <a href="#" class="btn btn-warning">Ver detalhes »</a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-3 col-md-6 mb-4 zoom">
+              <div class="card">
+                <img class="card-img-top" src="imagem/agua.png" alt="">
+                <div class="card-body">
+                  <h4 class="card-title">Fleumático</h4>
+                  <p class="card-text text-justify">O temperamento linfático ou fleumático tem traços de sanguíneo e de
+                    bilioso, porém não tem traços de nervoso, o seu oposto. Tem pouca energia e pouca excitação e
+                    liga-se ao elemento água. É o temperamento dos tranqüilos que só querem viver com mínimo esforço.
+                  </p>
+                </div>
+                <div class="card-footer">
+                  <a href="#" class="btn btn-primary">Ver detalhes »</a>
+                </div>
+              </div>
+            </div>
+
+          </div>
+          <!-- /.row -->
+
         </div>
+
+
+      </main>
+    </article>
+    <footer class="py-5 bg-dark">
+      <div class="container">
+        <p class="m-0 text-center text-white">Copyright &copy; Picinin Website 2018</p>
       </div>
 
-    </main>
-  </article>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"></script>
 
-  <footer>
 
-  </footer>
-  <link href="libs/jquery-3.4.1.min.js" type="text/javascript">
-  <link href="libs/popper.min.js" type="text/javascript">
-  <link href="libs/bootstrap/js/bootstrap.min.js" type="text/javascript">
-  <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdbootstrap/4.5.7/js/mdb.min.js"></script>-->
-  <link href="js/myscripts.js" type="text/javascript">
+    <link href="js/myscripts.js" type="text/javascript">
 
 </body>
 
+<!--
 
+
+<link href="libs/jquery-3.4.1.min.js" type="text/javascript">
+    <link href="libs/popper.min.js" type="text/javascript">
+<link href="libs/bootstrap/js/bootstrap.min.js" type="text/javascript">
+
+-->
 
 </html>
