--- a/questionario.html
+++ b/questionario.html
@@ -1,1 +1,177 @@
-<p>Hummmm</p>
+<!DOCTYPE html>
+<html>
+
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Temperamentos</title>
+    <link rel="icon" href="imagem/icone.png">
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' href='libs/bootstrap/css/bootstrap.min.css'>
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
+    <link rel='stylesheet' href='css/Mystyle.css'>
+
+
+</head>
+
+
+<body>
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+            <a class="navbar-brand" href="index.html">
+                <img src="imagem/icone.png" width="30" height="30" class="d-inline-block align-top"
+                    alt="Sociedade Brasileira de Eubiose">
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample03"
+                aria-controls="navbarsExample03" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarsExample03">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="questionario.html">Questinonário</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">Temperamentos</a>
+                        <div class="dropdown-menu" aria-labelledby="dropdown03">
+                            <a class="dropdown-item" href="#">Sanguíneo</a>
+                            <a class="dropdown-item" href="#">Fleumático</a>
+                            <a class="dropdown-item" href="#">Bilioso</a>
+                            <a class="dropdown-item" href="#">Linfático</a>
+                        </div>
+                    </li>
+                </ul>
+                <!--
+          <form class="form-inline my-2 my-md-0">
+          <input class="form-control" type="text" placeholder="Search">
+        </form>
+        -->
+            </div>
+        </nav>
+
+
+        <article>
+            <main>
+                <!-- Page Content -->
+
+                <div class="form" id="aqui">
+
+
+                    <form>
+                        <label class="label" id="tituloquestionario">1) Selecione uma Caracteristica</label>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
+                                value="option1" checked>
+                            <label class="form-check-label" for="exampleRadios1" id="q1">
+                                Comunicativo
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2"
+                                value="option2">
+                            <label class="form-check-label" for="exampleRadios2" id="q2">
+                                Energético
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3"
+                                value="option3">
+                            <label class="form-check-label" for="exampleRadios3" id="q3">
+                                Habilidoso
+                            </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios4"
+                                value="option4">
+                            <label class="form-check-label" for="exampleRadios4" id="q4">
+                                Calmo
+                            </label>
+                        </div>
+                        <div id="botoesForm">
+                            <button type="button" class="btn btn-primary" onclick="anterior();">Back</button>
+                            <button type="button" class="btn btn-success" onclick="proximo();">Next</button>
+                        </div>
+                    </form>
+                    <!--<div class="container-fluid ">
+                    <div class="row mt-3">
+                        <div class="col-12">
+                            <label class="label" id="tituloquestionario">1) Selecione uma Caracteristica</label>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
+                                    value="option1" checked>
+                                <label class="form-check-label" for="exampleRadios1" id="q1">Comunicativo</label>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2"
+                                    value="option2">
+                                <label class="form-check-label" for="exampleRadios2" id="q2">Energético</label>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3"
+                                    value="option3">
+                                <label class="form-check-label" for="exampleRadios3" id="q3">Habilidoso</label>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="form-check">
+                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios4"
+                                    value="option4">
+                                <label class="form-check-label" for="exampleRadios4" id="q4">Calmo</label>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <button type="button" class="btn btn-danger" onclick="anterior()">Voltar</button>
+                        </div>
+                        <div class="col">
+                            <button type="button" class="btn btn-success" onclick="proximo()">Próximo</button>
+                        </div>
+                    </div>-->
+                </div>
+
+                <!--Novo-->
+                <canvas id="horizontalBar"></canvas>
+                </div>
+
+            </main>
+        </article>
+        <footer class="py-5 bg-dark footer">
+            <div class="container">
+                <p class="m-0 text-center text-white">Copyright &copy; Picinin Website 2018</p>
+            </div>
+        </footer>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>
+
+        <link href="js/myscripts.js" type="text/javascript">
+        <link href="js/questionario.js" type="text/javascript">
+</body>
+
+<!--
+
+
+<link href="libs/jquery-3.4.1.min.js" type="text/javascript">
+    <link href="libs/popper.min.js" type="text/javascript">
+<link href="libs/bootstrap/js/bootstrap.min.js" type="text/javascript">
+
+-->
+
+</html>
