formulario aparenta estar funcionando

--- a/questionario.html
+++ b/questionario.html
@@ -60,7 +60,7 @@
             <main>
                 <!-- Page Content -->
 
-                <div class="form" id="aqui">
+                <div class="form" id="formquest">
 
 
                     <form>
@@ -98,46 +98,7 @@
                             <button type="button" class="btn btn-success" onclick="proximo();">Next</button>
                         </div>
                     </form>
-                    <!--<div class="container-fluid ">
-                    <div class="row mt-3">
-                        <div class="col-12">
-                            <label class="label" id="tituloquestionario">1) Selecione uma Caracteristica</label>
-                        </div>
-                        <div class="col-12">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1"
-                                    value="option1" checked>
-                                <label class="form-check-label" for="exampleRadios1" id="q1">Comunicativo</label>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2"
-                                    value="option2">
-                                <label class="form-check-label" for="exampleRadios2" id="q2">Energético</label>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3"
-                                    value="option3">
-                                <label class="form-check-label" for="exampleRadios3" id="q3">Habilidoso</label>
-                            </div>
-                        </div>
-                        <div class="col-12">
-                            <div class="form-check">
-                                <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios4"
-                                    value="option4">
-                                <label class="form-check-label" for="exampleRadios4" id="q4">Calmo</label>
-                            </div>
-                        </div>
-                        <div class="col">
-                            <button type="button" class="btn btn-danger" onclick="anterior()">Voltar</button>
-                        </div>
-                        <div class="col">
-                            <button type="button" class="btn btn-success" onclick="proximo()">Próximo</button>
-                        </div>
-                    </div>-->
+                    
                 </div>
 
                 <!--Novo-->
@@ -151,9 +112,7 @@
                 <p class="m-0 text-center text-white">Copyright &copy; Picinin Website 2018</p>
             </div>
         </footer>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
+        <script src="libs/jquery-3.4.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
             integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
             crossorigin="anonymous"></script>
@@ -161,8 +120,13 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
 
-        <link href="js/myscripts.js" type="text/javascript">
-        <link href="js/questionario.js" type="text/javascript">
+        <script src="libs/grafico/jquery.easing.min.js"></script>
+        <script type="text/javascript"
+            src="libs/grafico/mdb.min.js"></script>
+        <script src="js/myscripts.js"></script>
+        <script src="js/questionario.js"></script>
+        <!--<link href="js/myscripts.js" type="text/javascript">
+        <link href="js/questionario.js" type="text/javascript">-->
 </body>
 
 <!--
