--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
           <header class="jumbotron my-4">
             <h1 class="display-3">Olá, Seja Bem Vindo!</h1>
             <p class="lead">Esta é uma página para a realização do questionário sobre temperamentos.</p>
-            <a class="btn btn-primary btn-lg" href="#" role="button">Começar»</a>
+            <a class="btn btn-primary btn-lg" href="questionario.html" role="button">Começar»</a>
           </header>
           <div id="imgParalax" class="parallax">
 
