--- a/questionario.html
+++ b/questionario.html
@@ -107,11 +107,11 @@
 
             </main>
         </article>
-        <footer class="py-5 bg-dark footer">
+        <!--<footer class="py-5 bg-dark fixar-rodape">
             <div class="container">
                 <p class="m-0 text-center text-white">Copyright &copy; Picinin Website 2018</p>
             </div>
-        </footer>
+        </footer>-->
         <script src="libs/jquery-3.4.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
             integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
