--- a/index.html
+++ b/index.html
@@ -40,18 +40,16 @@
             <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">Temperamentos</a>
             <div class="dropdown-menu" aria-labelledby="dropdown03">
-              <a class="dropdown-item" href="#">Sanguíneo</a>
-              <a class="dropdown-item" href="#">Fleumático</a>
-              <a class="dropdown-item" href="#">Bilioso</a>
-              <a class="dropdown-item" href="#">Linfático</a>
+              <a class="dropdown-item" href="subviews/sanguineo.html">Sanguíneo</a>
+              <a class="dropdown-item" href="subviews/colerico.html">Colérico</a>
+              <a class="dropdown-item" href="subviews/melancolico.html">Melancólico</a>
+              <a class="dropdown-item" href="subviews/fleumatico.html">Fleumático</a>
             </div>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sobre.html">Sobre</a>
+          </li>
         </ul>
-        <!--
-          <form class="form-inline my-2 my-md-0">
-          <input class="form-control" type="text" placeholder="Search">
-        </form>
-        -->
       </div>
     </nav>
 
@@ -151,9 +149,9 @@
     </article>
     <footer class="py-5 bg-dark">
       <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Picinin Website 2018</p>
+        <p class="m-0 text-center text-white">&copy; Sociedade Brasileira de Eubiose &reg;</p>
       </div>
-
+      <!--
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"></script>
@@ -163,19 +161,11 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"></script>
-
-
-    <link href="js/myscripts.js" type="text/javascript">
+      -->
+      <script src="libs/jquery-3.4.1.min.js"></script>
+      <script src="libs/popper.min.js"></script>
+      <script src="libs/bootstrap/js/bootstrap.min.js"></script>
 
 </body>
-
-<!--
-
-
-<link href="libs/jquery-3.4.1.min.js" type="text/javascript">
-    <link href="libs/popper.min.js" type="text/javascript">
-<link href="libs/bootstrap/js/bootstrap.min.js" type="text/javascript">
-
--->
 
 </html>
