--- a/questionario.html
+++ b/questionario.html
@@ -30,28 +30,26 @@
 
             <div class="collapse navbar-collapse" id="navbarsExample03">
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="questionario.html">Questinonário</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="dropdown03" data-toggle="dropdown"
                             aria-haspopup="true" aria-expanded="false">Temperamentos</a>
                         <div class="dropdown-menu" aria-labelledby="dropdown03">
-                            <a class="dropdown-item" href="#">Sanguíneo</a>
-                            <a class="dropdown-item" href="#">Fleumático</a>
-                            <a class="dropdown-item" href="#">Bilioso</a>
-                            <a class="dropdown-item" href="#">Linfático</a>
+                            <a class="dropdown-item" href="subviews/sanguineo.html">Sanguíneo</a>
+                            <a class="dropdown-item" href="subviews/colerico.html">Colérico</a>
+                            <a class="dropdown-item" href="subviews/melancolico.html">Melancólico</a>
+                            <a class="dropdown-item" href="subviews/fleumatico.html">Fleumático</a>
                         </div>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../sobre.html">Sobre</a>
+                    </li>
                 </ul>
-                <!--
-          <form class="form-inline my-2 my-md-0">
-          <input class="form-control" type="text" placeholder="Search">
-        </form>
-        -->
             </div>
         </nav>
 
@@ -98,7 +96,7 @@
                             <button type="button" class="btn btn-success" onclick="proximo();">Next</button>
                         </div>
                     </form>
-                    
+
                 </div>
 
                 <!--Novo-->
@@ -107,35 +105,12 @@
 
             </main>
         </article>
-        <!--<footer class="py-5 bg-dark fixar-rodape">
-            <div class="container">
-                <p class="m-0 text-center text-white">Copyright &copy; Picinin Website 2018</p>
-            </div>
-        </footer>-->
+
         <script src="libs/jquery-3.4.1.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-            crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>
-
-        <script src="libs/grafico/jquery.easing.min.js"></script>
-        <script type="text/javascript"
-            src="libs/grafico/mdb.min.js"></script>
-        <script src="js/myscripts.js"></script>
+        <script src="libs/popper.min.js"></script>
+        <script src="libs/bootstrap/js/bootstrap.min.js"></script>
+        <script src="libs/grafico/mdb.min.js"></script>
         <script src="js/questionario.js"></script>
-        <!--<link href="js/myscripts.js" type="text/javascript">
-        <link href="js/questionario.js" type="text/javascript">-->
 </body>
-
-<!--
-
-
-<link href="libs/jquery-3.4.1.min.js" type="text/javascript">
-    <link href="libs/popper.min.js" type="text/javascript">
-<link href="libs/bootstrap/js/bootstrap.min.js" type="text/javascript">
-
--->
 
 </html>
