detecção de telas mobile
imagem do templo é escondida em dispositivos móveis

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     por tudo,porem não tem energia suficiente para realizá-las.</p>
                 </div>
                 <div class="card-footer">
-                  <a href="#" class="btn btn-success">Ver detalhes »</a>
+                  <a href="subviews/sanguineo.html" class="btn btn-success">Ver detalhes »</a>
                 </div>
               </div>
             </div>
@@ -100,7 +100,7 @@
                     geral.</p>
                 </div>
                 <div class="card-footer">
-                  <a href="" class="btn btn-danger">Ver detalhes »</a>
+                  <a href="subviews/colerico.html" class="btn btn-danger">Ver detalhes »</a>
                 </div>
               </div>
             </div>
@@ -118,7 +118,7 @@
                     interior.</p>
                 </div>
                 <div class="card-footer">
-                  <a href="#" class="btn btn-warning">Ver detalhes »</a>
+                  <a href="subviews/melancolico.html" class="btn btn-warning">Ver detalhes »</a>
                 </div>
               </div>
             </div>
@@ -134,7 +134,7 @@
                   </p>
                 </div>
                 <div class="card-footer">
-                  <a href="#" class="btn btn-primary">Ver detalhes »</a>
+                  <a href="subviews/fleumatico.html" class="btn btn-primary">Ver detalhes »</a>
                 </div>
               </div>
             </div>
@@ -165,6 +165,15 @@
       <script src="libs/jquery-3.4.1.min.js"></script>
       <script src="libs/popper.min.js"></script>
       <script src="libs/bootstrap/js/bootstrap.min.js"></script>
+      <script src="js/myscripts.js"></script>
+      <script>
+      if(IsMobile())
+      {
+        //alert('mobile detectado');
+        $('#imgParalax').hide();
+      }
+
+      </script>
 
 </body>
 
