--- a/subviews/colerico.html
+++ b/subviews/colerico.html
@@ -102,11 +102,16 @@
                             <div class="row">
                                 <div class="col-lg-8 mx-auto">
                                     <h2>Alimentação</h2>
-                                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio
+                                    <!--<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio
                                         fugiat voluptatem dolor,
                                         provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et
                                         repudiandae ipsa exercitationem,
-                                        in, quo totam.</p>
+                                        in, quo totam.</p>-->
+                                    <ul>
+                                        <li><b>Comer: </b> Calóricos, excitantes, estimulantes, e fortemente temperados.
+                                        </li>
+                                        <li><b>Evitar:</b>.</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
