--- a/subviews/fleumatico.html
+++ b/subviews/fleumatico.html
@@ -104,9 +104,20 @@
                             <div class="row">
                                 <div class="col-lg-8 mx-auto">
                                     <h2>Alimentação</h2>
-                                    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio
-                                        fugiat voluptatem dolor, provident officiis, id iusto! Obcaecati incidunt, qui
-                                        nihil beatae magnam et repudiandae ipsa exercitationem, in, quo totam.</p>
+                                    <!--<p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vero odio
+                                        fugiat voluptatem dolor,
+                                        provident officiis, id iusto! Obcaecati incidunt, qui nihil beatae magnam et
+                                        repudiandae ipsa exercitationem,
+                                        in, quo totam.</p>-->
+                                    <ul>
+                                        <li><b>Comer: </b> Sal.</li>
+                                        <li><b>Evitar:</b> Ingerir alimentos que não cresçam sob a terra. Plantas que
+                                            crescem sob a terra
+                                            e demoram a emergir só iriam aumentar o bem-estar interior, e com tendência
+                                            à impedir
+                                            que ele tome parte ativa no mundo.
+                                        </li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
