--- a/subviews/fleumatico.html
+++ b/subviews/fleumatico.html
@@ -110,13 +110,10 @@
                                         repudiandae ipsa exercitationem,
                                         in, quo totam.</p>-->
                                     <ul>
-                                        <li><b>Comer: </b> Sal.</li>
-                                        <li><b>Evitar:</b> Ingerir alimentos que não cresçam sob a terra. Plantas que
-                                            crescem sob a terra
-                                            e demoram a emergir só iriam aumentar o bem-estar interior, e com tendência
-                                            à impedir
-                                            que ele tome parte ativa no mundo.
-                                        </li>
+                                        <li><b>Comer: </b> Não podem ser vegetariano, devem comer carnes de animais
+                                            rápidos e ligeiros, e comida com pimenta, e louro. O salsão e similares são
+                                            bons porque movimentam os líquidos.</li>
+                                        <li><b>Evitar:</b> Raízes, farinha, sopas e mingau em hipótese alguma. </li>
                                     </ul>
                                 </div>
                             </div>
