--- a/subviews/melancolico.html
+++ b/subviews/melancolico.html
@@ -108,11 +108,11 @@
                                         repudiandae ipsa exercitationem,
                                         in, quo totam.</p>-->
                                     <ul>
-                                        <li><b>Comer: </b> Alimentos que cresçam bem perto do sol, que amadureçam sob as
-                                            forças solares,
-                                            e que medrem bem longe da terra, os alimentos indicados são as frutas.
-                                        </li>
-                                        <li><b>Evitar:</b>.</li>
+                                        <li><b>Comer: </b> Peixes e aves constituem uma boa alimentação para o
+                                            melancólico, assim como frutas, folhas, flores, aveia e doces(são bons pois
+                                            nesse temperamento facilitam a atividade hepática).</li>
+                                        <li><b>Evitar:</b>Sal, temperos salinos, raízes e plantas baixas e
+                                            principalmente alimentos oleosos e gordurosos</li>
                                     </ul>
                                 </div>
                             </div>
