--- a/subviews/sanguineo.html
+++ b/subviews/sanguineo.html
@@ -109,8 +109,10 @@
                                         repudiandae ipsa exercitationem,
                                         in, quo totam.</p>-->
                                     <ul>
-                                        <li><b>Comer: </b> Sal.</li>
-                                        <li><b>Evitar:</b>.</li>
+                                        <li><b>Comer: </b> Raízes em geral(para prender-se a terra), vegetais baixos,
+                                            carnes de animais pesados, muitas frutas.</li>
+                                        <li><b>Evitar:</b>comidas salgadas, comer pouco feijão e batata(tendem a
+                                            aumentar a pressão).</li>
                                     </ul>
                                 </div>
                             </div>
