--- a/subviews/colerico.html
+++ b/subviews/colerico.html
@@ -108,9 +108,10 @@
                                         repudiandae ipsa exercitationem,
                                         in, quo totam.</p>-->
                                     <ul>
-                                        <li><b>Comer: </b> Calóricos, excitantes, estimulantes, e fortemente temperados.
+                                        <li><b>Comer: </b> Vegetais, folhas, raízes e frutas, comer preferencialmente
+                                            carnes de animais leves(aves).</li>
+                                        <li><b>Evitar:</b>Carnes de animais selvagens, pimenta, temperos e gorduras.
                                         </li>
-                                        <li><b>Evitar:</b>.</li>
                                     </ul>
                                 </div>
                             </div>
