correção das fontes

--- a/index.html
+++ b/index.html
@@ -78,10 +78,9 @@
             <h1 class="display-3">Olá, Seja Bem Vindo!</h1>
             <p class="lead">Esta é uma página para a realização do questionário sobre temperamentos.</p>
             <a class="btn btn-primary btn-lg" href="questionario.html" role="button">Começar»</a>
+            
           </header>
-          <div id="imgParalax" class="parallax">
-
-          </div>
+          <div id="imgParalax" class="parallax"></div>
           <!-- Page Features -->
           <div class="row text-center">
 
