--- a/sobre.html
+++ b/sobre.html
@@ -59,7 +59,7 @@
                 <div class="container">
                     <!-- Introduction Row -->
                     <h1 class="my-4">Sobre nós
-                        <small>conheça nos!</small>
+                        <small>conheça-nos!</small>
                     </h1>
                     <p><a href="http://www.eubiose.org.br">A Sociedade Brasileira de Eubiose</a> é uma sociedade fundada
                         por Henrique José de Souza, apoiado por sua esposa Helena Jefferson de Souza, em São Lourenço,
@@ -71,7 +71,7 @@
                             <h2 class="my-4">Nosso time</h2>
                         </div>
                         <div class="col-lg-4 col-sm-6 text-center mb-4">
-                            <img class="rounded-circle img-fluid d-block mx-auto" src="imagem/luffy.gif" alt="">
+                            <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
                             <h3>Luís H. Picinin Jandre
                                 <small>Developer</small>
                             </h3>
@@ -79,7 +79,7 @@
                             </p>
                         </div>
                         <div class="col-lg-4 col-sm-6 text-center mb-4">
-                            <img class="rounded-circle img-fluid d-block mx-auto" src="imagem/hh.jpg" alt="">
+                            <img class="rounded-circle img-fluid d-block mx-auto" src="http://placehold.it/200x200" alt="">
                             <h3>Heitor H. Gil Alexandre
                                 <small>Administrador</small>
                             </h3>
