correções de português
depois de muito estresse, o código não estava errado(chrome mizerável)

--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
         if (IsMobile()) {
           //alert('mobile detectado');
           $('#imgParalax').hide();
+          $('.zoom').removeClass('zoom');
         }
 
       </script>
