--- a/subviews/melancolico.html
+++ b/subviews/melancolico.html
@@ -75,8 +75,8 @@
                                         fiéis, desconfiados e tendem a escolher profissões que possam exercer sozinhos.
                                     </p>
                                     <ul>
-                                        <li><b>Pontos fortes: </b>lealdade, dedicação e sensibilidade;</li>
-                                        <li><b>Pontos que precisam ser trabalhados: </b>egoísmo, pessimismo e
+                                        <li><b>Pontos fortes: </b>Lealdade, dedicação e sensibilidade;</li>
+                                        <li><b>Pontos que precisam ser trabalhados: </b>Egoísmo, pessimismo e
                                             inflexibilidade.</li>
                                         <!--<li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
                       <li>Minimal custom CSS so you are free to explore your own unique design options</li>-->
@@ -108,11 +108,11 @@
                                         repudiandae ipsa exercitationem,
                                         in, quo totam.</p>-->
                                     <ul>
-                                        <li><b>Comer: </b> Peixes e aves constituem uma boa alimentação para o
+                                        <li><b>Comer: </b>Peixes e aves constituem uma boa alimentação para o
                                             melancólico, assim como frutas, folhas, flores, aveia e doces(são bons pois
                                             nesse temperamento facilitam a atividade hepática).</li>
-                                        <li><b>Evitar:</b>Sal, temperos salinos, raízes e plantas baixas e
-                                            principalmente alimentos oleosos e gordurosos</li>
+                                        <li><b>Evitar: </b>Sal, temperos salinos, raízes e plantas baixas e
+                                            principalmente alimentos oleosos e gordurosos.</li>
                                     </ul>
                                 </div>
                             </div>
