--- a/subviews/sanguineo.html
+++ b/subviews/sanguineo.html
@@ -74,10 +74,10 @@
                                         interagir. Além disso,
                                         costumam fazer gestos largos e falar bem em público.</p>
                                     <ul>
-                                        <li><b>Pontos fortes: </b>são comunicativos, resilientes, adaptáveis e
+                                        <li><b>Pontos fortes: </b>São comunicativos, resilientes, adaptáveis e
                                             entusiastas;
                                         </li>
-                                        <li><b>Pontos que precisam ser trabalhados:</b> impulsividade, falta de atenção,
+                                        <li><b>Pontos que precisam ser trabalhados: </b>Impulsividade, falta de atenção,
                                             superficialidade e exagero.</li>
                                         <!--<li>Bootstrap's scrollspy feature which highlights which section of the page you're on in the navbar</li>
                           <li>Minimal custom CSS so you are free to explore your own unique design options</li>-->
@@ -92,7 +92,7 @@
                             <div class="row">
                                 <div class="col-lg-8 mx-auto">
                                     <h2>Elemental</h2>
-                                    <p class="lead">Possui como elemento o Ar</p>
+                                    <p class="lead">Possui como elemento o Ar.</p>
                                 </div>
                             </div>
                         </div>
@@ -109,9 +109,9 @@
                                         repudiandae ipsa exercitationem,
                                         in, quo totam.</p>-->
                                     <ul>
-                                        <li><b>Comer: </b> Raízes em geral(para prender-se a terra), vegetais baixos,
+                                        <li><b>Comer: </b>Raízes em geral(para prender-se a terra), vegetais baixos,
                                             carnes de animais pesados, muitas frutas.</li>
-                                        <li><b>Evitar:</b>comidas salgadas, comer pouco feijão e batata(tendem a
+                                        <li><b>Evitar: </b>Comidas salgadas, comer pouco feijão e batata(tendem a
                                             aumentar a pressão).</li>
                                     </ul>
                                 </div>
