--- a/subviews/fleumatico.html
+++ b/subviews/fleumatico.html
@@ -93,7 +93,7 @@
                             <div class="row">
                                 <div class="col-lg-8 mx-auto">
                                     <h2>Elemental</h2>
-                                    <p class="lead">Possui como elemento a Água</p>
+                                    <p class="lead">Possui como elemento a Água.<!--<img src="../imagem/agua.png" width="20" height="20" alt="água" srcset="">--></p>
                                 </div>
                             </div>
                         </div>
@@ -110,10 +110,10 @@
                                         repudiandae ipsa exercitationem,
                                         in, quo totam.</p>-->
                                     <ul>
-                                        <li><b>Comer: </b> Não podem ser vegetariano, devem comer carnes de animais
+                                        <li><b>Comer: </b>Não podem ser vegetariano, devem comer carnes de animais
                                             rápidos e ligeiros, e comida com pimenta, e louro. O salsão e similares são
                                             bons porque movimentam os líquidos.</li>
-                                        <li><b>Evitar:</b> Raízes, farinha, sopas e mingau em hipótese alguma. </li>
+                                        <li><b>Evitar: </b>Raízes, farinha, sopas e mingau em hipótese alguma. </li>
                                     </ul>
                                 </div>
                             </div>
