erros de sintaxe corrigidos no index.html

--- a/index.html
+++ b/index.html
@@ -66,105 +66,105 @@
         </ul>
       </div>
     </nav>
+  </header>
 
+  <article>
+    <main>
+      <!-- Page Content -->
+      <div class="container">
 
-    <article>
-      <main>
-        <!-- Page Content -->
-        <div class="container">
-
-          <!-- Jumbotron Header -->
-          <header class="jumbotron my-4">
-            <h1 class="display-3">Olá, Seja Bem Vindo!</h1>
-            <p class="lead">Esta é uma página para a realização do questionário sobre temperamentos.</p>
-            <a class="btn btn-primary btn-lg" href="questionario.html" role="button">Começar»</a>
-            
-          </header>
-          <div id="imgParalax" class="parallax"></div>
-          <!-- Page Features -->
-          <div class="row text-center">
-
-            <div class="col-lg-3 col-md-6 mb-4 zoom">
-              <div class="card">
-                <img class="card-img-top" src="imagem/ar.png" alt="">
-                <div class="card-body">
-                  <h4 class="card-title">Sanguíneo</h4>
-                  <p class="card-text text-justify">O temperamento sanguíneo tem traços de nervoso e de
-                    linfático, porém não tem traços de bilioso. Tem pouca energia e pouca excitação e
-                    liga-se ao elemento ar. É o temperamento das pessoas que querem fazer muitas coisas e se interessam
-                    por tudo,porem não tem energia suficiente para realizá-las.</p>
-                </div>
-                <div class="card-footer">
-                  <a href="subviews/sanguineo.html" class="btn btn-success">Ver detalhes »</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-md-6 mb-4 zoom">
-              <div class="card">
-                <img class="card-img-top" src="imagem/fogo.png" alt="">
-                <div class="card-body">
-                  <h4 class="card-title">Colérico</h4>
-                  <p class="card-text text-justify">O temperamento nervoso ou colérico tem traços de sanguíneo e de
-                    bilioso, seus
-                    dois adjacentes, porém não tem traços de linfático, seu antagônico ou oposto. Tem grande energia e
-                    grande
-                    excitação e liga-se ao elemento fogo, por isso é o temperamento dos líderes, chefes e dirigentes em
-                    geral.</p>
-                </div>
-                <div class="card-footer">
-                  <a href="subviews/colerico.html" class="btn btn-danger">Ver detalhes »</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-md-6 mb-4 zoom">
-              <div class="card">
-                <img class="card-img-top" src="imagem/terra.png" alt="">
-                <div class="card-body">
-                  <h4 class="card-title">Melancólico</h4>
-                  <p class="card-text text-justify">O temperamento bilioso ou melancólico tem traços de nervoso e de
-                    linfático, porém
-                    não tem traços de sanguíneo, o seu oposto. Tem energia e pouca excitação e liga-se ao elemento
-                    terra.
-                    É o temperamento dos introvertidos, dos sofredores que vivem dentro do seu grande mundo
-                    interior.</p>
-                </div>
-                <div class="card-footer">
-                  <a href="subviews/melancolico.html" class="btn btn-warning">Ver detalhes »</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-md-6 mb-4 zoom">
-              <div class="card">
-                <img class="card-img-top" src="imagem/agua.png" alt="">
-                <div class="card-body">
-                  <h4 class="card-title">Fleumático</h4>
-                  <p class="card-text text-justify">O temperamento linfático ou fleumático tem traços de sanguíneo e de
-                    bilioso, porém não tem traços de nervoso, o seu oposto. Tem pouca energia e pouca excitação e
-                    liga-se ao elemento água. É o temperamento dos tranqüilos que só querem viver com mínimo esforço.
-                  </p>
-                </div>
-                <div class="card-footer">
-                  <a href="subviews/fleumatico.html" class="btn btn-primary">Ver detalhes »</a>
-                </div>
-              </div>
-            </div>
-
-          </div>
-          <!-- /.row -->
+        <!-- Jumbotron Header -->
+        <div class="jumbotron my-4">
+          <h1 class="display-3">Olá, Seja Bem Vindo!</h1>
+          <p class="lead">Esta é uma página para a realização do questionário sobre temperamentos.</p>
+          <a class="btn btn-primary btn-lg" href="questionario.html" role="button">Começar»</a>
 
         </div>
+        <div id="imgParalax" class="parallax"></div>
+        <!-- Page Features -->
+        <div class="row text-center">
 
+          <div class="col-lg-3 col-md-6 mb-4 zoom">
+            <div class="card">
+              <img class="card-img-top" src="imagem/ar.png" alt="">
+              <div class="card-body">
+                <h4 class="card-title">Sanguíneo</h4>
+                <p class="card-text text-justify">O temperamento sanguíneo tem traços de nervoso e de
+                  linfático, porém não tem traços de bilioso. Tem pouca energia e pouca excitação e
+                  liga-se ao elemento ar. É o temperamento das pessoas que querem fazer muitas coisas e se interessam
+                  por tudo,porem não tem energia suficiente para realizá-las.</p>
+              </div>
+              <div class="card-footer">
+                <a href="subviews/sanguineo.html" class="btn btn-success">Ver detalhes »</a>
+              </div>
+            </div>
+          </div>
 
-      </main>
-    </article>
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">&copy; Sociedade Brasileira de Eubiose &reg;</p>
+          <div class="col-lg-3 col-md-6 mb-4 zoom">
+            <div class="card">
+              <img class="card-img-top" src="imagem/fogo.png" alt="">
+              <div class="card-body">
+                <h4 class="card-title">Colérico</h4>
+                <p class="card-text text-justify">O temperamento nervoso ou colérico tem traços de sanguíneo e de
+                  bilioso, seus
+                  dois adjacentes, porém não tem traços de linfático, seu antagônico ou oposto. Tem grande energia e
+                  grande
+                  excitação e liga-se ao elemento fogo, por isso é o temperamento dos líderes, chefes e dirigentes em
+                  geral.</p>
+              </div>
+              <div class="card-footer">
+                <a href="subviews/colerico.html" class="btn btn-danger">Ver detalhes »</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mb-4 zoom">
+            <div class="card">
+              <img class="card-img-top" src="imagem/terra.png" alt="">
+              <div class="card-body">
+                <h4 class="card-title">Melancólico</h4>
+                <p class="card-text text-justify">O temperamento bilioso ou melancólico tem traços de nervoso e de
+                  linfático, porém
+                  não tem traços de sanguíneo, o seu oposto. Tem energia e pouca excitação e liga-se ao elemento
+                  terra.
+                  É o temperamento dos introvertidos, dos sofredores que vivem dentro do seu grande mundo
+                  interior.</p>
+              </div>
+              <div class="card-footer">
+                <a href="subviews/melancolico.html" class="btn btn-warning">Ver detalhes »</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 col-md-6 mb-4 zoom">
+            <div class="card">
+              <img class="card-img-top" src="imagem/agua.png" alt="">
+              <div class="card-body">
+                <h4 class="card-title">Fleumático</h4>
+                <p class="card-text text-justify">O temperamento linfático ou fleumático tem traços de sanguíneo e de
+                  bilioso, porém não tem traços de nervoso, o seu oposto. Tem pouca energia e pouca excitação e
+                  liga-se ao elemento água. É o temperamento dos tranqüilos que só querem viver com mínimo esforço.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a href="subviews/fleumatico.html" class="btn btn-primary">Ver detalhes »</a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+        <!-- /.row -->
+
       </div>
-      <!--
+
+
+    </main>
+  </article>
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">&copy; Sociedade Brasileira de Eubiose &reg;</p>
+    </div>
+    <!--
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"></script>
@@ -175,18 +175,18 @@
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
       crossorigin="anonymous"></script>
       -->
-      <script src="libs/jquery-3.4.1.min.js"></script>
-      <script src="libs/popper.min.js"></script>
-      <script src="libs/bootstrap/js/bootstrap.min.js"></script>
-      <script src="js/myscripts.js"></script>
-      <script>
-        if (IsMobile()) {
-          //alert('mobile detectado');
-          $('#imgParalax').hide();
-          $('.zoom').removeClass('zoom');
-        }
+    <script src="libs/jquery-3.4.1.min.js"></script>
+    <script src="libs/popper.min.js"></script>
+    <script src="libs/bootstrap/js/bootstrap.min.js"></script>
+    <script src="js/myscripts.js"></script>
+    <script>
+      if (IsMobile()) {
+        //alert('mobile detectado');
+        $('#imgParalax').hide();
+        $('.zoom').removeClass('zoom');
+      }
 
-      </script>
+    </script>
 
 </body>
 
